# Messenger

./: .gitignore  .gitmodules  CMakeLists.txt  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  CommonConst.h  Encrypt.cpp  Messenger.sln  README.md  Server.cpp  client.htm  json_objects.h  key.pem  main.cpp  server.h  style.css
bcrypt-cpp/include/: bcrypt.h
bcrypt-cpp/src/: bcrypt.cpp  blowfish.cpp  node_blf.h
create_db/: database_setup_method1.sql  database_setup_method2.sql
enc_temp_folder/9e68c144d17a5396ba10c7f95a471/: BurgerMenu.jsx
enc_temp_folder/b43c3fd6b67cfd8e602ccfcb2a3da0/: MessagerHandler.cpp
encrypt/: Encrypt.cpp  Encrypt.h  ServiceFunc.cpp  ServiceFunc.h
front-end/: package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.js
front-end/src/auth/: AuthProvider.jsx  RequireAuth.jsx  useAuth.jsx
front-end/src/components/: BurgerMenu.jsx  Client.jsx  ClientId.jsx  LoadingSpinner.jsx  MessageList.jsx  NotFound.jsx  Profile.jsx  Receiver.jsx  SendForm.jsx  SignUpLogin.jsx  SocketContext.jsx  URLGuard.jsx  WhoToWrite.jsx
front-end/src/css/: burger.css  form.css  sign.css  spinner.css  whotowrite.css
header/: AsyncFileReader.h  CommonConst.h  DataBase.h  FileSender.h  MessagerHandler.h  RequestHandler.h  Server.h  TimeUtils.h  UserData.h  UserModel.h  WebSocketUser.h
misc/: cert.pem  csr.pem  key.pem
source/: DataBase.cpp  FileSender.cpp  MessagerHandler.cpp  RequestHandler.cpp  Server.cpp  ServiceFunc.cpp  TimeFunc.cpp  TimeUtils.cpp  UserData.cpp  UserModel.cpp  WebSocketUser.cpp
web-files/: client.htm  client.html  index.htm  index.html  index.js  login.js  signup.js  style.css
web-files/front-end/: package-lock.json  package.json
web-files/front-end/public/: index.html
web-files/front-end/src/: App.js  index.js  login.js  signup.js
web-files/front-end/src/components/: BurgerMenu.jsx  Client.jsx  SendForm.jsx  SignUpLogin.jsx
web-files/front-end/src/css/: burger.css  form.css
